--- a/api/src/package.json
+++ b/api/src/package.json
@@ -2,19 +2,31 @@
   "name": "lex_dop_api",
   "version": "1.0.0",
   "description": "lex_dop_api",
-  "author": "nhquocvinh@gmail.com",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.16.3",
-    "mysql": "^2.12.0"
-  },
+  "author": "Vinh Nguyen <nhquocvinh@gmail.com>",
   "license": "MIT",
   "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/vinhnguyenhq/lex-dop-api"
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "NODE_ENV=testing jest --forceExit --runInBand"
+  },
+  "dependencies": {
+    "dataloader": "^1.4.0",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "graphql-yoga": "^1.16.2",
+    "lodash": "^4.17.11",
+    "mysql": "^2.12.0"
+  },
+  "devDependencies": {
+    "graphql": "^14.0.2",
+    "graphql-tools": "^3.1.1",
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.4"
   }
 }
